# django-annotatable-properties

./: LICENSE  README.md  setup.cfg
annotatable_properties/: __init__.py  apps.py  managers.py
