[metadata]
name = django-annotatable-properties
version = 0.1.3
description = A Django app that allows annotating properties on querysets.
long_description = file: README.rst
url = https://github.com/enesklcarslan/django-annotatable-properties/
author = Enes Kilicarslan
author_email = enesklcarslan@gmail.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.1